--- a/nlp4j/pom.xml
+++ b/nlp4j/pom.xml
@@ -75,7 +75,9 @@
 					<plugin>
 						<groupId>org.sonatype.plugins</groupId>
 						<artifactId>nexus-staging-maven-plugin</artifactId>
-						<version>1.6.8</version>
+						<!-- 1.6.8 Feb 13, 2017 -->
+						<!-- 1.6.13 Apr 21, 2022 -->
+						<version>1.7.0</version><!-- May 27, 2024 -->
 						<extensions>true</extensions>
 						<configuration>
 							<serverId>ossrh</serverId>
