--- a/nlp4j/nlp4j-opensearch/pom.xml
+++ b/nlp4j/nlp4j-opensearch/pom.xml
@@ -36,6 +36,11 @@
 			<artifactId>nlp4j-core</artifactId>
 			<version>1.3.7.14</version>
 		</dependency>
+		<dependency>
+			<groupId>org.nlp4j</groupId>
+			<artifactId>nlp4j-llm</artifactId>
+			<version>1.0.0.0</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
 			<groupId>junit</groupId>
