--- a/nlp4j/nlp4j-web-rag/pom.xml
+++ b/nlp4j/nlp4j-web-rag/pom.xml
@@ -36,6 +36,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.nlp4j</groupId>
+			<artifactId>nlp4j-core</artifactId>
+			<version>1.3.7.14</version>
+		</dependency>
+		<dependency>
+			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-solr</artifactId>
 			<version>0.9.6.1a</version>
 		</dependency>
