--- a/nlp4j/nlp4j-web-vectorsearch/docker/Dockerfile
+++ b/nlp4j/nlp4j-web-vectorsearch/docker/Dockerfile
@@ -1,8 +1,11 @@
-# Use the official Solr 9 image as the base image for Solr
-FROM solr:9 AS base
+# Use the official Solr 9 image as the base image
+FROM solr:9 AS solr
 
 # Switch to root to modify /opt/solr and install packages
 USER root
+
+# Set the default value for SOLR_ENDPOINT
+ENV SOLR_ENDPOINT=http://localhost:8983/solr/
 
 # Create a script to initialize Solr core and schema
 RUN echo '#!/bin/bash\n\
@@ -16,9 +19,21 @@ RUN echo '#!/bin/bash\n\
 # Make the script executable
 RUN chmod +x /opt/solr/init_solr.sh
 
-# Install Tomcat and download the .war file
-RUN apt-get update && apt-get install -y wget tomcat9 && \
-    wget https://github.com/oyahiroki/nlp4j/raw/master/nlp4j/nlp4j-web-vectorsearch/dist/nlp4j-web-vectorsearch.war -O /var/lib/tomcat9/webapps/nlp4j-web-vectorsearch.war
+# Install wget
+RUN apt-get update && apt-get install -y wget
+
+# Install Tomcat manually by downloading the official Tomcat distribution
+RUN wget https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.95/bin/apache-tomcat-9.0.95.tar.gz -O /tmp/tomcat.tar.gz && \
+    mkdir /opt/tomcat && \
+    tar xzf /tmp/tomcat.tar.gz -C /opt/tomcat --strip-components=1 && \
+    rm /tmp/tomcat.tar.gz
+
+# Add execute permissions to catalina.sh and change ownership of /opt/tomcat to solr user
+RUN chmod +x /opt/tomcat/bin/catalina.sh && \
+    chown -R solr:solr /opt/tomcat
+
+# Download the .war file and place it in the Tomcat webapps directory
+RUN wget --header="Cache-Control: no-cache" https://github.com/oyahiroki/nlp4j/raw/master/nlp4j/nlp4j-web-vectorsearch/dist/nlp4j-web-vectorsearch.war -O /opt/tomcat/webapps/nlp4j-web-vectorsearch.war
 
 # Expose ports for Solr and Tomcat
 EXPOSE 8983 8080
@@ -27,4 +42,4 @@ EXPOSE 8983 8080
 USER solr
 
 # Start Solr, initialize it, and start Tomcat
-CMD ["sh", "-c", "/opt/solr/bin/solr start & sleep 5 && /opt/solr/init_solr.sh && catalina.sh run"]
+CMD ["sh", "-c", "/opt/solr/bin/solr start & sleep 5 && /opt/solr/init_solr.sh && /opt/tomcat/bin/catalina.sh run"]
