--- a/nlp4j/nlp4j-core/pom.xml
+++ b/nlp4j/nlp4j-core/pom.xml
@@ -24,6 +24,7 @@
 	<!-- 1.3.7.1 : 2022-09-04 -->
 	<!-- 1.3.7.2 : 2022-09-08 -->
 	<!-- 1.3.7.3 : 2022-10-07 : UPDATES - UPOS20 -->
+	<!-- x.x.x.x : 2022-11-30 : ChatGPT was released -->
 	<!-- 1.3.7.4 : 2022-12-03 -->
 	<!-- 1.3.7.5 : 2023-01-22 -->
 	<!-- 1.3.7.6 : 2023-02-01 -->
@@ -34,6 +35,7 @@
 	<!-- 1.3.7.11 : 2023-08-16 -->
 	<!-- 1.3.7.12 : 2024-01-15 -->
 	<!-- 1.3.7.13 : 2024-08-08 -->
+	<!-- 1.3.7.14 : 2024-10-29 -->
 	<version>1.3.7.14</version>
 	<description>Natural Language Processing Library for Java</description>
 	<url>https://nlp4j.org/</url>
@@ -279,7 +281,7 @@
 			<artifactId>commons-io</artifactId>
 			<!-- 2023-08-16 : 2.11.0 to 2.13.0  -->
 			<!-- 2023-11-19 : 2.13.0 to 2.15.0  -->
-			<version>2.15.0</version>
+			<version>2.17.0</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
 		<dependency>
