--- a/nlp4j/nlp4j-web-vectorsearch/docker/Dockerfile
+++ b/nlp4j/nlp4j-web-vectorsearch/docker/Dockerfile
@@ -1,3 +1,6 @@
+# How to RUN
+# docker build -t my-nlp4j-web-vectorsearch .
+
 # Use the official Solr 9 image as the base image
 FROM solr:9 AS solr
 
@@ -38,7 +41,7 @@ RUN chmod +x /opt/tomcat/bin/catalina.sh && \
 
 # Download the .war file and place it in the Tomcat webapps directory
 # RUN wget --header="Cache-Control: no-cache" "https://github.com/oyahiroki/nlp4j/raw/master/nlp4j/nlp4j-web-vectorsearch/dist/nlp4j-web-vectorsearch.war?2$(date +%Y%m%d%H%M%S)" -O /opt/tomcat/webapps/nlp4j-web-vectorsearch.war
-RUN wget "https://github.com/oyahiroki/nlp4j/raw/master/nlp4j/nlp4j-web-vectorsearch/dist/nlp4j-web-vectorsearch.war?2$(date +%Y%m%d%H%M%S)" -O /opt/tomcat/webapps/nlp4j-web-vectorsearch.war
+RUN wget "https://github.com/oyahiroki/nlp4j/raw/master/nlp4j/nlp4j-web-vectorsearch/dist/nlp4j-web-vectorsearch.war?3$(date +%Y%m%d%H%M%S)" -O /opt/tomcat/webapps/nlp4j-web-vectorsearch.war
 
 # Expose ports for Solr and Tomcat
 EXPOSE 8983 8080
