--- a/nlp4j/nlp4j-okt/pom.xml
+++ b/nlp4j/nlp4j-okt/pom.xml
@@ -2,14 +2,39 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.nlp4j</groupId>
+	<!-- PARENT -->
+	<parent>
+		<groupId>org.nlp4j</groupId>
+		<artifactId>nlp4j</artifactId>
+		<version>1.3.1.0</version>
+	</parent>
 	<artifactId>nlp4j-okt</artifactId>
 	<version>1.0.0.0</version>
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 	<dependencies>
+		<dependency>
+			<groupId>org.nlp4j</groupId>
+			<artifactId>nlp4j-core</artifactId>
+			<version>1.3.7.14</version>
+		</dependency>
 		<dependency>
 			<groupId>org.openkoreantext</groupId>
 			<artifactId>open-korean-text</artifactId>
 			<version>2.1.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.2</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 </project>
