--- a/nlp4j/pom.xml
+++ b/nlp4j/pom.xml
@@ -16,6 +16,7 @@
 			<name>Apache License, Version 2.0</name>
 			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
 			<distribution>repo</distribution>
+			<comments>Copyright (c) 2024 Hiroki　Oya. All rights reserved.</comments>
 		</license>
 	</licenses>
 	<scm>
