--- a/nlp4j/nlp4j-all/pom.xml
+++ b/nlp4j/nlp4j-all/pom.xml
@@ -29,8 +29,24 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>1.3.7.10</version>
+			<version>1.3.7.15</version>
 		</dependency>
+		<dependency>
+			<groupId>org.nlp4j</groupId>
+			<artifactId>nlp4j-solr</artifactId>
+			<version>0.9.6.1a</version>
+		</dependency>
+		<dependency>
+			<groupId>org.nlp4j</groupId>
+			<artifactId>nlp4j-opensearch</artifactId>
+			<version>1.0.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.nlp4j</groupId>
+			<artifactId>nlp4j-openai</artifactId>
+			<version>0.1.0.0</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.nlp4j/nlp4j-kuromoji -->
 		<dependency>
 			<groupId>org.nlp4j</groupId>
