--- a/nlp4j/nlp4j-azure/pom.xml
+++ b/nlp4j/nlp4j-azure/pom.xml
@@ -11,15 +11,22 @@
 	<version>1.0.0.0</version>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/com.azure/azure-search -->
+		<!-- dependency -->
+		<!-- groupId>com.azure</groupId -->
+		<!-- artifactId>azure-search</artifactId -->
+		<!-- version>1.0.0-beta.1</version -->
+		<!-- dependency -->
+		<!-- https://mvnrepository.com/artifact/com.azure/azure-search-documents -->
 		<dependency>
 			<groupId>com.azure</groupId>
-			<artifactId>azure-search</artifactId>
-			<version>1.0.0-beta.1</version>
+			<artifactId>azure-search-documents</artifactId>
+			<version>11.7.3</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>[1.3.4.0,)</version>
+			<version>[1.3.7.15,)</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
 		<dependency>
@@ -27,6 +34,12 @@
 			<artifactId>okhttp</artifactId>
 			<version>4.11.0</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
