--- a/nlp4j/nlp4j-web-core/pom.xml
+++ b/nlp4j/nlp4j-web-core/pom.xml
@@ -1,13 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.nlp4j</groupId>
-	<artifactId>nlp4j-web-rag</artifactId>
-	<version>1.0.0.0</version>
-	<packaging>war</packaging>
-	<!-- 文字コードとJavaのバージョンの設定 -->
-	<properties>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>org.nlp4j</groupId>
+  <artifactId>nlp4j-web-core</artifactId>
+  <version>1.0.0.0</version>
+  	<properties>
 		<!-- 変数 -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- 変数 -->
@@ -15,7 +11,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
-	<build>
+		<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -33,37 +29,12 @@
 			</plugin>
 		</plugins>
 	</build>
-	<dependencies>
+	
+		<dependencies>
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
 			<version>1.3.7.15</version>
-		</dependency>
-		<dependency>
-			<groupId>org.nlp4j</groupId>
-			<artifactId>nlp4j-web-core</artifactId>
-			<version>1.0.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.nlp4j</groupId>
-			<artifactId>nlp4j-solr</artifactId>
-			<version>0.9.6.1a</version>
-		</dependency>
-		<dependency>
-			<groupId>org.nlp4j</groupId>
-			<artifactId>nlp4j-opensearch</artifactId>
-			<version>1.0.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.nlp4j</groupId>
-			<artifactId>nlp4j-openai</artifactId>
-			<version>0.1.0.0</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -85,7 +56,6 @@
 			<artifactId>weld-servlet</artifactId>
 			<version>2.4.8.Final</version>
 		</dependency>
-
 		<!--
 		https://mvnrepository.com/artifact/javax.websocket/javax.websocket-api -->
 		<dependency>
@@ -101,4 +71,5 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	
 </project>
