--- a/nlp4j/nlp4j-web-app/pom.xml
+++ b/nlp4j/nlp4j-web-app/pom.xml
@@ -52,7 +52,7 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>1.3.7.12</version>
+			<version>1.3.7.15</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -93,12 +93,12 @@
 			<artifactId>jetty-annotations</artifactId>
 			<version>9.4.51.v20230217</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-server -->
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-webapp</artifactId>
-			<version>9.4.51.v20230217</version>
+			<artifactId>jetty-server</artifactId>
+			<version>9.4.55.v20240627</version>
 		</dependency>
-
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
