--- a/nlp4j/nlp4j-mecab/pom.xml
+++ b/nlp4j/nlp4j-mecab/pom.xml
@@ -22,14 +22,14 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>1.3.7.8</version>
+			<version>1.3.7.15</version>
 		</dependency>
 		<dependency>
 			<groupId>net.moraleboost</groupId>
 			<artifactId>cmecab</artifactId>
 			<version>2.0</version>
 			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/cmecab-2.0.jar</systemPath>
+			<systemPath>C:\Users\oyahi\git\nlp4j\nlp4j\nlp4j-mecab/lib/cmecab-2.0.jar</systemPath>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.nativelibs4java/bridj -->
 		<dependency>
