--- a/nlp4j/nlp4j-twitter4j/pom.xml
+++ b/nlp4j/nlp4j-twitter4j/pom.xml
@@ -41,18 +41,11 @@
 			<artifactId>nlp4j-core</artifactId>
 			<version>[1.3.4.0,)</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.twitter4j/twitter4j-core -->
+		<!-- https://mvnrepository.com/artifact/com.twitter/twitter-api-java-sdk -->
 		<dependency>
-			<groupId>org.twitter4j</groupId>
-			<artifactId>twitter4j-core</artifactId>
-			<version>4.0.7</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>[2.7,)</version>
+			<groupId>com.twitter</groupId>
+			<artifactId>twitter-api-java-sdk</artifactId>
+			<version>2.0.3</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
