--- a/nlp4j/nlp4j-core/pom.xml
+++ b/nlp4j/nlp4j-core/pom.xml
@@ -39,7 +39,8 @@
 	<!-- 1.3.7.15 : 2024-11-17 -->
 	<!-- 1.3.7.16 : 2024-12-22 https://mvnrepository.com/artifact/org.nlp4j/nlp4j-core/1.3.7.16 -->
 	<!-- 1.3.7.17 : 2025-03-10 https://mvnrepository.com/artifact/org.nlp4j/nlp4j-core/1.3.7.17 -->
-	<version>1.3.7.18</version>
+	<!-- 1.3.7.18 : 2025-03-27 -->
+	<version>1.3.7.19</version>
 	<description>Natural Language Processing Library for Java</description>
 	<url>https://nlp4j.org/</url>
 	<licenses>
@@ -323,7 +324,12 @@
 			<artifactId>commons-math3</artifactId>
 			<version>3.6.1</version>
 		</dependency>
-		
+		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.18.0</version>
+		</dependency>
 		
 		
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
