--- a/nlp4j/nlp4j-webcrawler/pom.xml
+++ b/nlp4j/nlp4j-webcrawler/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.nlp4j</groupId>
@@ -9,25 +11,20 @@
 	<!-- 1.0.0.0 : 2020-05-17 -->
 	<!-- 1.1.0.0 : 2022-04-29 -->
 	<!-- 1.1.1.0 : 2023-02-01 -->
+	<!-- 1.1.1.0 : 2023-04-08 -->
 	<!-- https://mvnrepository.com/artifact/org.nlp4j/nlp4j-webcrawler -->
-	<version>1.2.0.0</version>
+	<version>1.3.0.0</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>1.3.7.15</version>
+			<version>1.3.7.18</version>
 		</dependency>
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-test</artifactId>
 			<version>1.0.0.0</version>
 			<scope>test</scope>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
-		<dependency>
-			<groupId>commons-codec</groupId>
-			<artifactId>commons-codec</artifactId>
-			<version>1.15</version>
 		</dependency>
 	</dependencies>
 	<build></build>
