--- a/nlp4j/nlp4j-wiki/pom.xml
+++ b/nlp4j/nlp4j-wiki/pom.xml
@@ -14,9 +14,9 @@
 	<packaging>jar</packaging>
 	<name>nlp4j-wiki</name>
 	<!-- https://mvnrepository.com/artifact/org.nlp4j/nlp4j-wiki -->
-	<!-- VERSION -->
 	<!-- 0.3.1.0 : Sep 04, 2022 -->
-	<version>1.1.0.0</version>
+	<!-- 1.1.0.0 : Jul 22, 2023 -->
+	<version>1.2.0.0</version>
 	<description>NLP4J for Wikipedia / Wiktionary</description>
 	<url>https://nlp4j.org/</url>
 	<licenses>
@@ -117,23 +117,15 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>1.3.7.16</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.nlp4j/nlp4j-webcrawler -->
-		<dependency>
-			<groupId>org.nlp4j</groupId>
-			<artifactId>nlp4j-webcrawler</artifactId>
-			<version>1.2.0.0</version>
+			<version>1.3.7.18</version>
 		</dependency>
 		<!--
 		https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
-		<!-- 1.22 : Oct 31, 2022 -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-compress</artifactId>
-			<version>[1.22,)</version>
-		</dependency>
-		<!--
+			<version>1.27.1</version>
+		</dependency>		<!--
 		https://mvnrepository.com/artifact/org.sweble.wikitext/swc-parser-lazy -->
 		<!-- 3.1.9 : Sep 26, 2018 -->
 		<dependency>
