--- a/nlp4j/nlp4j-wiki/pom.xml
+++ b/nlp4j/nlp4j-wiki/pom.xml
@@ -16,7 +16,8 @@
 	<!-- https://mvnrepository.com/artifact/org.nlp4j/nlp4j-wiki -->
 	<!-- 0.3.1.0 : Sep 04, 2022 -->
 	<!-- 1.1.0.0 : Jul 22, 2023 -->
-	<version>1.2.0.0</version>
+	<!-- 1.2.0.0 : Mar 28, 2025 -->
+	<version>1.2.1.0</version>
 	<description>NLP4J for Wikipedia / Wiktionary</description>
 	<url>https://nlp4j.org/</url>
 	<licenses>
@@ -117,7 +118,7 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>1.3.7.18</version>
+			<version>1.3.7.19</version>
 		</dependency>
 		<!--
 		https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
