--- a/nlp4j/nlp4j-wordpress/pom.xml
+++ b/nlp4j/nlp4j-wordpress/pom.xml
@@ -12,7 +12,8 @@
 	<artifactId>nlp4j-wordpress</artifactId>
 	<packaging>jar</packaging>
 	<name>nlp4j-wordpress</name>
-	<version>1.0.0.0</version>
+	<!-- 1.0.0.0 : Mar 29, 2025 -->
+	<version>1.0.1.0</version>
 	<description>NLP4J for Wordpress</description>
 	<url>https://nlp4j.org/</url>
 	<licenses>
@@ -115,7 +116,7 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>1.3.7.18</version>
+			<version>1.3.7.19</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
